--- a/_.env.yml
+++ b/_.env.yml
@@ -1,7 +1,7 @@
-DISCORD_TOKEN=MTQwNzQxNTQzNTEyMDQ4MDI5OA.GEnBkv.y9p148hweKI17x-kn6M8qTkrr1yw2DSaC6hjUA
-CLIENT_ID=1407415435120480298
-GUILD_ID=1406214671664549899
+DISCORD_TOKEN=Token-Bot-Discord
+CLIENT_ID=Id-Bot-Discord
+GUILD_ID=Id-Server
 CURRENCY=VND
-BRAND_NAME=Zerra Studio
+BRAND_NAME=ABC Studio
 BRAND_COLOR=#00B894
 PORT=3000
